--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projeto-node",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,7 +15,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "start": "nodemon src/server.js"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
